--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,16 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+node_modules
+**/node_modules
 /.pnp
 .pnp.js
+dist
+**/dist/
+dist-ssr
+*.local
+package-lock.json
+**/package-lock.json
 
 # testing
 /coverage
@@ -26,8 +33,11 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# local env files
-.env*.local
+# env files
+.env
+**/env
+**/.env
+**/**/.env
 
 # vercel
 .vercel
